# system-config

./: .Xkbmap  .Xmodmap  .Xresources  .abbrev_defs  .after-push-hook  .aspell.conf  .bash_logout  .bash_netcompletion  .bash_profile  .bashrc  .bashrc-Darwin  .bashrc-aliases  .bashrc-bhj  .bashrc-freebsd  .bashrc-interactive  .bashrc-interactive-bhj  .bashrc-linux  .bashrc-linux-bash  .bashrc-linux-bhj  .bashrc-min  .bashrc-no-emacs  .bashrc-path  .bashrc-public  .bashrc-public-bash  .bashrc-remote  .bashrc-ssh-agent  .bashrc-windows  .bashrc_not_tramp  .bashrc_public  .bbdb  .beagle-external-filter.xml  .beagle-files-queryable.xml  .before-gia-hook  .bhj-Xmodmap  .code-reading  .config-ubuntu.sh  .crontab  .crontab.bhj  .ctags  .dir-locals.el  (+646 more)
3party/: CMakeLists.txt
Filters/: AssemblyInfo.cs  FilterBmp.cs  FilterC.cs  FilterCSharp.cs  FilterChm.cs  FilterCpp.cs  FilterEmpathyLog.cs  FilterExternal.cs  FilterFortran.cs  FilterHtml.cs  FilterIgnore.cs  FilterJava.cs  FilterJpeg.cs  FilterKAddressBook.cs  FilterKCal.cs  FilterLisp.cs  FilterMail.cs  FilterMan.cs  FilterMonodoc.cs  FilterOle.cs  FilterOpenOffice.cs  FilterPPT.cs  FilterPascal.cs  FilterPerl.cs  FilterPhp.cs  FilterPython.cs  FilterRuby.cs  FilterScilab.cs  FilterShellscript.cs  FilterSpreadsheet.cs  FilterSvg.cs  FilterText.cs  FilterTiff.cs  Makefile.am
Filters/7zip/: 7zip.sources
Filters/HtmlAgilityPack/: Header.cs  HtmlAttribute.cs  HtmlDocument.cs  MixedCodeDocument.cs  crc32.cs  tools.cs
Util/: ArrayFu.cs  AvahiBrowser.cs  BatteryMonitor.cs  BetterBitArray.cs  ChmFile.cs  CompatFileChooser.cs  Config.cs  DateTimeUtil.cs  Debug.cs  DelayedTextWriter.cs  DirectoryWalker.cs  Evolution.cs  ExceptionHandlingThread.cs  ExtendedAttribute.cs  ExternalStringsHack.cs.in  FSpotTools.cs  FileAdvise.cs  FileNameMarshaler.cs  FileSystem.cs  FrequencyStatistics.cs  Galago.cs  GnomeFu.cs  GtkUtils.cs  GuidFu.cs  HtmlRemovingReader.cs  ImBuddy.cs  Inotify.cs  Log.cs  Logger.cs  Makefile.am  Makefile.in  MultiReader.cs  NetworkService.cs  Note.cs  OperaHistory.cs  Password.cs  PathFinder.cs  PullingReader.cs  QueryKeywordMapping.cs  ReflectionFu.cs  (+22 more)
Util/F-Spot/: PixbufUtils.cs
Util/Hal/: AccessControl.cs  Context.cs  ICPUFreq.cs  IKillSwitch.cs  IStorage.cs  IVolume.cs  Manager.cs  SystemPowerManagement.cs  VolumeCrypto.cs
Util/SemWeb/: Algos.cs  AssemblyInfo.cs  Euler.cs  GraphMatch.cs  LiteralFilters.cs  MemoryStore.cs  N3Reader.cs  N3Writer.cs  NamespaceManager.cs  Query.cs  RdfReader.cs  RdfWriter.cs  RdfXmlReader.cs  RdfXmlWriter.cs  SparqlClient.cs  SpecialRelations.cs
ac-clang-20150714.1032/clang-server/: CMakeLists.txt  ClangServer.cpp  ClangServer.hpp  ClangSession.cpp  ClangSession.hpp  CommandLine.hpp  Common.cpp  readme.md  readme.org
ac-clang-20180710.546/clang-server/: CMakeLists.txt  ClangServer.cpp  ClangServer.hpp  ClangSession.cpp  ClangSession.hpp  Command.cpp  Command.hpp  Common.cpp  Common.hpp  DataObject.hpp  Profiler.hpp  changes.org  main.cpp  readme.ja.md  readme.ja.org  readme.md  readme.org
autotest/: CMakeLists.txt  display_test.cpp  snorebenchmark.cpp
beagrepd/: AssemblyInfo.cs  BeagrepDaemon.cs  BuildIndex.cs  DumpIndex.cs  ExternalMetadataQueryable.cs  ExtractContent.cs  FileAttributes.cs  FileAttributesStore.cs  FileAttributesStore_ExtendedAttribute.cs  FileAttributesStore_Mixed.cs  FileAttributesStore_Sqlite.cs  Filter.cs  FilterFactory.cs  Flavor.cs  IFileAttributesStore.cs  IIndexer.cs  IQueryResult.cs  IQueryWorker.cs  IQueryable.cs  IndexSynchronization.cs  IndexerReceipts.cs  IndexerRequest.cs  InformationalMessagesRequestExecutor.cs  LuceneBitArray.cs  LuceneCommon.cs  LuceneFileQueryable.cs  LuceneIndexingDriver.cs  LuceneQueryable.cs  LuceneQueryingDriver.cs  Makefile.am  ManageIndex.cs  MasterDelete.cs  PropertyKeywordFu.cs  QueryDriver.cs  QueryExecutor.cs  QueryResult.cs  QueryStringParser.cs  Queryable.cs  QueryableFlavor.cs  RemoteControlExecutors.cs  (+21 more)
beagrepd/FileSystemQueryable/: DirectoryIndexableGenerator.cs  DirectoryModel.cs  DirectoryState.cs  FileCrawlTask.cs  FileNameFilter.cs  FileSystemQueryable.cs  IFileEventBackend.cs  InotifyBackend.cs  InternalUriManager.cs  NullFileEventBackend.cs  TreeCrawlTask.cs  XmpSidecarStore.cs
beagrepd/IndexHelper/: IndexHelper.cs  (+1 more)
conf-data/: Makefile.am  Makefile.in  blocate.conf  external-filters.xml.sample  query-mapping.xml
data/: CMakeLists.txt  Makefile.am  snore.qrc
engine/: Makefile.am  factory.py  ibus-sdim-createdb.in  keysyms.py  main.py  sdim.xml.in.in  table.py  table.xml.in.in  tabsqlitedb.py
epiphany-extension/: Makefile.am  Makefile.in  beagle.py.in
firefox-extension/: Makefile.am  Makefile.in  README  chrome.manifest
glue/: Makefile.am  Makefile.in  beagled-utils.c  beagrepd-utils.c  eggaccelerators.h  inotify-glue.c  ioprio-glue.c  mono-glue.c  screensaver-glue.c  search-entry-watermark.h  search-entry.h  spawn-glue.c  thread-glue.c  tomboykeybinder.c  tomboykeybinder.h  ui-glue.c  vmsize-glue.c  wv1-glue.c
icons/: Makefile.am
lang/: CMakeLists.txt  de.ts  en.ts  snore_i18n.qrc.in
plugin-example/: Makefile.am  exuberant-ctags.c  gtags-antlr-java.c
share/: CMakeLists.txt  FindLibsnore.cmake  FindLibsnore.cmake.in  snorenotify.desktop  snorenotify.desktop.in
src/: CMakeLists.txt  Input.java  main.cpp  snorenotify.cpp  snorenotify.h  trayicon.cpp  trayicon.h
tools/: Config.cs  DocExtractor.cs  Info.cs  Makefile.am  Query.cs  SettingsQt.cs  Shutdown.cs  StandardTokenizerImpl.cs  StaticQuery.cs  Token.cs  beagle-doc-extractor.8  beagle-info.1  beagle-settings-qt.ui  beagle-settings.1  beagle-settings.desktop  beagle-settings.desktop.in  beagle-status  beagrep  beagrep-config.1  beagrep-crawl-system.in  beagrep-doc-extractor.8  beagrep-files  beagrep-get-tokens  beagrep-glob-files  beagrep-index-info  beagrep-index-info.8  beagrep-info.1  beagrep-ping  beagrep-ping.1  beagrep-query.1  beagrep-settings-qt.ui  beagrep-settings.1  beagrep-settings.desktop.in.in  beagrep-shutdown.1  beagrep-status  beagrep-status.1  beagrep-unurl-and-filter.pl  blocate  boot.inotify.init  keygrabber.py  (+3 more)
(+51448 files in other folders)
